--- a/_includes/grid_image_overlay_box_list.html
+++ b/_includes/grid_image_overlay_box_list.html
@@ -22,9 +22,9 @@
 		{% assign element_url = element[4] %}
 
 		{% capture element_html %}
-    <!-- BEGIN CARD PROFILE (BORDERD) -->
+    <!-- BEGIN GRID ITEM -->
     {% include image_overlay_box.html title=element_title subtitle=element_subtitle desc=element_desc image=element_image href=element_url maxwidth="100%" %}
-    <!-- END CARD PROFILE (BORDERD) -->
+    <!-- END GRID ITEM -->
     {% endcapture %}
     {% assign grid_list_gourp_array = grid_list_gourp_array | push: element_html %}
 
