--- a/_includes/grid_image_overlay_listing_list.html
+++ b/_includes/grid_image_overlay_listing_list.html
@@ -9,21 +9,19 @@
 		{% assign element_index = forloop.index %}
 
     {% comment %}
-		<!-- element[0]: title.first-word -->
-		<!-- element[1]: title.other-word -->
-		<!-- element[2]: desc -->
-    <!-- element[3]: image -->
-		<!-- element[4]: url -->
+		<!-- element[0]: title -->
+		<!-- element[1]: items -->
+    <!-- element[2]: image -->
+		<!-- element[3]: url -->
 		{% endcomment %}
 		{% assign element_title = element[0] %}
-		{% assign element_subtitle = element[1] %}
-		{% assign element_desc = element[2] %}
-    {% assign element_image = element[3] %}
-		{% assign element_url = element[4] %}
+		{% assign element_items = element[1] %}
+    {% assign element_image = element[2] %}
+		{% assign element_url = element[3] %}
 
 		{% capture element_html %}
     <!-- BEGIN GRID ITEM -->
-    {% include image_overlay_fashion.html title=element_title subtitle=element_subtitle desc=element_desc image=element_image href=element_url maxwidth="100%" %}
+    {% include image_overlay_listing.html title=element_title items=element_items image=element_image href=element_url maxwidth="100%" %}
     <!-- END GRID ITEM -->
     {% endcapture %}
     {% assign grid_list_gourp_array = grid_list_gourp_array | push: element_html %}
