--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_box.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_fashion.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_bw_rect.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_lines.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_listing.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
