--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,6 +217,14 @@ a.btn:hover {
 .hack blockquote,
 .hack code,
 .hack em,
+.hack strong {
+  font-size: 1rem;
+}
+
+.hack,
+.hack blockquote,
+.hack code,
+.hack em,
 .hack h1,
 .hack h2,
 .hack h3,
@@ -230,11 +238,11 @@ a.btn:hover {
 }
 
 .hack h1 { font-size: 2.0rem; }
-.hack h2 { font-size: 1.8rem; }
-.hack h3 { font-size: 1.6rem; }
-.hack h4 { font-size: 1.4rem; }
-.hack h5 { font-size: 1.2rem; }
-.hack h6 { font-size: 1.0rem; }
+.hack h2 { font-size: 1.5em; }
+.hack h3 { font-size: 1.17em; }
+.hack h4 { font-size: 1.0em; }
+.hack h5 { font-size: 0.83em; }
+.hack h6 { font-size: 0.67em; }
 
 .hack blockquote,
 .hack code,
