--- a/_includes/card_profile_cycled.html
+++ b/_includes/card_profile_cycled.html
@@ -4,10 +4,7 @@
     <!--<h2>Diana <span>Reed</span></h2>-->
     <p class="cycled-profile-card-p">{{ include.desc }}</p>
     <div class="icons">
-      {% if include.url.size > 0 %}<a href="{{ include.url }}" target="_blank"><i class="fa fa-superpowers"></i></a>{% endif %}
-      {% if include.github.size > 0 %}<a href="{{ include.github }}" target="_blank"><i class="fa fa-github-alt"></i></a>{% endif %}
-      {% if include.email.size > 0 %}<a href="mailto:{{ include.email }}"><i class="fa fa-paper-plane"></i></a>{% endif %}
-      {% if include.phone.size > 0 %}<a href="tel:{{ include.phone }}"><i class="fa fa-telephone"></i></a>{% endif %}
+      {% include linked_icons.html url=include.url github=include.github email=include.email phone=include.phone %}
     </div>
   </figcaption><img src="{{ include.image }}" />
   <div class="position">{{ include.caption }}</div>
