--- a/assets/css/image_overlay_half_panel.css
+++ b/assets/css/image_overlay_half_panel.css
@@ -100,8 +100,8 @@
   text-transform: uppercase;
 }
 
-figure.overlay-image-simple-scroll h3::before,
-figure.overlay-image-simple-scroll h3::after {
+.overlay-image-half-panel h3::before,
+.overlay-image-half-panel h3::after {
   display: none !important;
 }
 
