--- a/_includes/image_overlay_half_panel.html
+++ b/_includes/image_overlay_half_panel.html
@@ -7,5 +7,5 @@
     <h3>{{ include.title }}</h3>
     <p>{{ include.desc }}</p>
   </figcaption>
-  <span class="read-more"><a href=" {{ include.href }}">{{ include.readmore }}</a>&nbsp;<i class="fa fa-arrow-right"></i></span>
+  <span class="read-more"><a href=" {{ include.href }}">{{ include.readmore | default: "View More" }}</a>&nbsp;<i class="fa fa-arrow-right"></i></span>
 </figure>
