--- a/_includes/image_overlay_half_panel.html
+++ b/_includes/image_overlay_half_panel.html
@@ -1,1 +1,1 @@
-{% include image_overlay_panel panelsize="half" color=include.color title=include.title desc=include.desc image=include.image href=include.href readmore=include.readmore %}
+{% include image_overlay_panel.html panelsize="half" color=include.color title=include.title desc=include.desc image=include.image href=include.href readmore=include.readmore %}
