--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -20,7 +20,9 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_lines.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_listing.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_simple_scroll.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_panel.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_half_panel.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_full_panel.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
