--- a/_includes/grid_image_overlay_panel_posts_list.html
+++ b/_includes/grid_image_overlay_panel_posts_list.html
@@ -10,7 +10,8 @@
 	{% capture post_desc %}{% include post_preview.html html=post.excerpt limit=120 %}{% endcapture %}
 	{% assign tempSubArray = tempSubArray | push: post_desc %}
 	{% capture post_img %}{% include post_hero_url.html image=post.hero.url res='low' %}{% endcapture %}
-	{% assign tempSubArray = tempSubArray | push: post_img %}
+	{% assign post_img_hv = post_img | replace: '_H_', '_HV_' | replace: '_VH_', '_VH_' %}
+	{% assign tempSubArray = tempSubArray | push: post_img_hv %}
 	{% assign tempSubArray = tempSubArray | push: post.url %}
 	{% assign tempSubArray = tempSubArray | push: include.color %}
 
