--- a/_includes/grid_image_overlay_full_panel_posts_list.html
+++ b/_includes/grid_image_overlay_full_panel_posts_list.html
@@ -1,1 +1,1 @@
-{% include grid_image_overlay_panel_posts_list.html panelsize='full' sectionid=include.sectionid list=include.list title=include.title title_url=include.title_url desc=include.desc readmore=include.readmore readmore_title=include.readmore_title cols=include.cols %}
+{% include grid_image_overlay_panel_posts_list.html panelsize='full' color=include.color sectionid=include.sectionid list=include.list title=include.title title_url=include.title_url desc=include.desc readmore=include.readmore readmore_title=include.readmore_title cols=include.cols %}
