--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,3 +1,3 @@
 {% capture post_html %}{{ include.html }}{% endcapture %}
 {% capture post_limit %}{{ include.limit }}{% endcapture %}
-{{ post_html | strip_newlines | strip_html | strip_newlines | replace: '\n', ' ' | replace: '<br>', ' ' | replace: '<br/>', ' ' | replace: '<br />', ' ' | slice: 0, post_limit }}...
+{{ post_html | replace: '<br>', ' ' | replace: '<br/>', ' ' | replace: '<br />', ' ' | strip_html | strip_newlines | replace: '\n', ' ' | replace: '\n', ' '| slice: 0, post_limit }}...
