--- a/_includes/grid_image_overlay_drop_posts_list.html
+++ b/_includes/grid_image_overlay_drop_posts_list.html
@@ -7,7 +7,7 @@
 	<!-- element[3]: url -->
 	<!-- element[4]: color -->
 	{% assign tempSubArray = tempSubArray | push: post.title %}
-	{% capture post_desc %}{% include post_preview.html html=post.excerpt limit=site.excerpt_limit %}{% endcapture %}
+	{% capture post_desc %}{% include post_preview.html html=post.content limit=site.excerpt_limit %}{% endcapture %}
 	{% assign tempSubArray = tempSubArray | push: post_desc %}
 	{% capture post_img %}{% include post_hero_url.html image=post.hero.url res='low' %}{% endcapture %}
 	{% assign tempSubArray = tempSubArray | push: post_img %}
