--- a/_includes/image_overlay_panel.html
+++ b/_includes/image_overlay_panel.html
@@ -8,5 +8,5 @@
     <p>{{ include.desc }}</p>
   </figcaption>
   <span class="read-more">{{ include.readmore | default: "View More" }}&nbsp;<i class="fa fa-arrow-right"></i></span>
-  <a href=" {{ include.href }}"></a>
+  {% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
 </figure>
