--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -25,6 +25,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_full_panel.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_fade_framed.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_drop.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
