--- a/_includes/grid_card_post_list.html
+++ b/_includes/grid_card_post_list.html
@@ -4,8 +4,7 @@
 	{% assign group_index = forloop.index %}
 
 	{% assign grid_list_gourp_array = ''| split: '/' %}
-
-	{% for element in group %}
+element in group %}
 		{% assign element_index = forloop.index %}
 
     {% comment %}
