--- a/_includes/grid_card_post_list.html
+++ b/_includes/grid_card_post_list.html
@@ -4,7 +4,8 @@
 	{% assign group_index = forloop.index %}
 
 	{% assign grid_list_gourp_array = ''| split: '/' %}
-element in group %}
+
+	{% for element in group %}
 		{% assign element_index = forloop.index %}
 
     {% comment %}
