--- a/_includes/grid_card_post_posts_list.html
+++ b/_includes/grid_card_post_posts_list.html
@@ -26,5 +26,5 @@
 
 {% assign outer_list = '' | split: '/' %}
 {% assign outer_list = outer_list | push: converted_list %}
-<!-- grid_card_post_list.html: {{ outer_list | inspect }} -->
+<script> /*grid_card_post_list.html: {{ outer_list | inspect }} */ </script>
 {% include grid_card_post_list.html sectionid=include.sectionid list=outer_list title=include.title title_url=include.title_url desc=include.desc readmore=include.readmore readmore_title=include.readmore_title cols=include.cols %}
