--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/highlighter.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/footer.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
+
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/music_player.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/video.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_round.css">
@@ -31,6 +32,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bubble.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_drop_icons.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_quotes.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/blockquote_layer.css">
 {% for css in page.prelink_css %}
 <link rel="stylesheet" href="{{ css }}">
