--- a/assets/css/card_post.css
+++ b/assets/css/card_post.css
@@ -6,7 +6,7 @@ figure.card-post {
   color: #fff;
   position: relative;
   overflow: hidden;
-  margin: 10px auto;
+  margin: 10px auto !important;
   min-width: 250px;
   max-width: 310px;
   width: 100%;
