--- a/assets/css/card_profile.css
+++ b/assets/css/card_profile.css
@@ -5,7 +5,7 @@
   font-family: 'Quattrocento', Arial, sans-serif;
   position: relative;
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto !important;
   min-width: 230px;
   max-width: 315px;
   width: 100%;
