--- a/assets/css/image_overlay_camera.css
+++ b/assets/css/image_overlay_camera.css
@@ -114,6 +114,7 @@ figure.overlay-image-camera a {
   bottom: 0;
   position: absolute;
   z-index: 1;
+  border: none !important;
 }
 
 figure.overlay-image-camera a:hover {
