--- a/_includes/grid_image_overlay_camera_list.html
+++ b/_includes/grid_image_overlay_camera_list.html
@@ -11,17 +11,21 @@
     {% comment %}
 		<!-- element[0]: title -->
 		<!-- element[1]: subtitle -->
-    <!-- element[2]: image -->
-		<!-- element[3]: url -->
+    <!-- element[2]: image | if gallery: thumb -->
+		<!-- element[3]: url | if gallery: original -->
+		<!-- element[4]: type | could be nil -->
+		<!-- element[5]: format | could be nil -->
 		{% endcomment %}
 		{% assign element_title = element[0] %}
 		{% assign element_subtitle = element[1] %}
     {% assign element_image = element[2] %}
 		{% assign element_url = element[3] %}
+		{% assign element_url = element[4] %}
+		{% assign element_url = element[5] %}
 
 		{% capture element_html %}
     <!-- BEGIN GRID ITEM -->
-    {% include image_overlay_camera.html title=element_title subtitle=element_subtitle image=element_image href=element_url maxwidth="100%" %}
+    {% include image_overlay_camera.html title=element_title subtitle=element_subtitle image=element_image type=include.type href=element_url gallery=include.gallery maxwidth="100%" %}
     <!-- END GRID ITEM -->
     {% endcapture %}
     {% assign grid_list_gourp_array = grid_list_gourp_array | push: element_html %}
