--- a/_includes/image_overlay_camera.html
+++ b/_includes/image_overlay_camera.html
@@ -2,7 +2,7 @@
 {% assign this_media_format = include.format | default: 'jpeg' %}
 {% capture this_media_mix %} type="{{ this_media_type }}/{{ this_media_format }}"{% if this_media_type == 'video'%} data-poster="{{ include.thumb }}" data-sources='[{ "href": "{{ include.href }}", "type": "{{ this_media_type }}/{{ this_media_format }}"}]'{% endif %}{% endcapture %}
 <figure class="overlay-image-camera" {{ this_media_mix }} style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
-  <img src="{{ inlcude.image }}" />
+  <img src="{{ include.image }}" />
   <figcaption>
     <div class="heading">
       <h3>{{ include.title }}</h3>
