--- a/_includes/grid_image_overlay_camera_list.html
+++ b/_includes/grid_image_overlay_camera_list.html
@@ -20,12 +20,12 @@
 		{% assign element_subtitle = element[1] %}
     {% assign element_image = element[2] %}
 		{% assign element_url = element[3] %}
-		{% assign element_url = element[4] %}
-		{% assign element_url = element[5] %}
+		{% assign element_type = element[4] %}
+		{% assign element_format = element[5] %}
 
 		{% capture element_html %}
     <!-- BEGIN GRID ITEM -->
-    {% include image_overlay_camera.html title=element_title subtitle=element_subtitle image=element_image type=include.type href=element_url gallery=include.gallery maxwidth="100%" %}
+    {% include image_overlay_camera.html title=element_title subtitle=element_subtitle image=element_image type=element_type format=element_format href=element_url gallery=include.gallery maxwidth="100%" %}
     <!-- END GRID ITEM -->
     {% endcapture %}
     {% assign grid_list_gourp_array = grid_list_gourp_array | push: element_html %}
