--- a/_includes/image_overlay_camera.html
+++ b/_includes/image_overlay_camera.html
@@ -1,5 +1,5 @@
-{% assign this_media_type = include.type | default: 'image' %}
-{% assign this_media_format = include.format | default: 'jpeg' %}
+{% assign this_media_type = include.media_type | default: 'image' %}
+{% assign this_media_format = include.media_format | default: 'jpeg' %}
 {% capture this_media_mix %} type="{{ this_media_type }}/{{ this_media_format }}"{% if this_media_type == 'video'%} data-poster="{{ include.thumb }}" data-sources='[{ "href": "{{ include.href }}", "type": "{{ this_media_type }}/{{ this_media_format }}"}]'{% endif %}{% endcapture %}
 <figure class="overlay-image-camera" {{ this_media_mix }} style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
   <img src="{{ include.image }}" />
