--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_fade_detailed.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_camera.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post_detailed.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
