--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -64,10 +64,12 @@
 
 .post-module .thumbnail .date .day {
   font-size: 18px;
+  line-height: 18px;
 }
 
 .post-module .thumbnail .date .month {
   font-size: 12px;
+  line-height: 12px;
   text-transform: uppercase;
 }
 
@@ -110,6 +112,7 @@
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
+  line-height: 14px;
 }
 
 .post-module .post-content .title {
@@ -118,6 +121,7 @@
   color: #333333;
   font-size: 26px;
   font-weight: 700;
+  line-height: 26px;
 }
 
 .post-module .post-content .sub_title {
@@ -126,6 +130,7 @@
   color: #e74c3c;
   font-size: 20px;
   font-weight: 400;
+  line-height: 20px;
 }
 
 .post-module .post-content .title::before,
@@ -137,7 +142,7 @@
   display: block;
   color: #666666;
   font-size: 14px;
-  line-height: 1.8em;
+  line-height: 16px;
   max-height: 1px;
   overflow: hidden;
   /* opacity: 0; */
@@ -179,7 +184,7 @@
 .card-post-detailed {
   max-width: 310px;
   min-width: 250px;
-  padding: 0 25px;
+  padding: 0;
   -webkti-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
