--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -77,8 +77,8 @@
   display: block;
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: -25%;
+  height: 65%;
   -webkit-transition: all 0.3s linear 0s;
   -moz-transition: all 0.3s linear 0s;
   -ms-transition: all 0.3s linear 0s;
@@ -119,7 +119,7 @@
   margin: 0;
   padding: 0 0 10px;
   color: #333333;
-  font-size: 26px;
+  font-size: 22px;
   font-weight: 700;
   line-height: 26px;
 }
@@ -128,11 +128,13 @@
   margin: 0;
   padding: 0;
   color: #e74c3c;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 20px;
 }
 
+.post-module .post-content .sub_title::before,
+.post-module .post-content .sub_title::after,
 .post-module .post-content .title::before,
 .post-module .post-content .title::after {
   display: none !important;
