--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -79,6 +79,7 @@
   top: 0;
   left: -25%;
   height: 65%;
+  max-width: 300%;
   -webkit-transition: all 0.3s linear 0s;
   -moz-transition: all 0.3s linear 0s;
   -ms-transition: all 0.3s linear 0s;
