--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -80,6 +80,7 @@
   left: -25%;
   height: 65%;
   max-width: 300%;
+  background: #dedede;
   -webkit-transition: all 0.3s linear 0s;
   -moz-transition: all 0.3s linear 0s;
   -ms-transition: all 0.3s linear 0s;
