--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -160,6 +160,8 @@
 
 .post-module .post-content .post-meta {
   margin: 30px 0 0;
+  font-size: 12px;
+  line-height: 14px;
   color: #999999;
 }
 
