--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,8 @@ body {
   line-height: 1.5rem;
   margin: 0;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-  word-wrap: break-word
+  word-wrap: break-word;
+  background-color: #fff;
 }
 
 h1,
